<resources>
    <string name="app_name">Veggie</string>


    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="continuee">Continuar</string>
    <string name="send">Enviar</string>
    <string name="save">Guardar</string>

    <!-- Main navigation -->
    <string name="menu_home">Inicio</string>
    <string name="menu_search">Buscar</string>
    <string name="menu_cart">Carrito</string>
    <string name="menu_user">Usuario</string>
    <string name="menu_support">Soporte</string>

    <!-- Dialog messages -->
    <string name="dialog_clear_cart">¿Vaciar carrito?</string>

    <!-- Cart -->
    <string name="btn_make_order">Hacer pedido</string>
    <string name="total_empty_cart">Tu carrito está vacío</string>
    <string name="total_x_to_complete_min_order">Te faltan %s para el pedido mínimo</string>
    <string name="total_order">Vas %s</string>

    <!-- Labels -->
    <string name="label_no_stock">Agotado</string>
    <string name="label_discounted">%s Off</string>     <!-- use percentage sign in the string %s as app will
                                                        crash if used here as \% or simply % because of the formats -->



    <!-- Auth -->
    <string name="sign_in">Iniciar sesión</string>
    <string name="sign_up">Crear cuenta</string>
    <string name="user_or_sign_in_with">o ingresa con</string>
    <string name="btn_google">Ingresa con Google</string>
    <string name="btn_facebook">Ingresa con Facebook</string>
    <string name="btn_email">Ingresa con Email</string>
    <!-- emailAuth -->
    <string name="name">Nombre</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="reset_password_instructions">Escribe tu correo y te enviaremos un link para que puedas restablecer tu contraseña</string>
    <string name="reset_password_email_sent">Se ha enviado un link a tu correo para restablecer tu contraseña.</string>
    <!-- Facebook -->
    <string name="facebook_app_id">315214526875872</string>
    <string name="fb_login_protocol_scheme">fb315214526875872</string>


    <!-- User -->
    <string name="user_profile">Mi cuenta</string>
    <string name="user_orders">Pedidos</string>
    <string name="user_addresses">Direcciones</string>
    <string name="user_sign_out">Cerrar sesión</string>

    <!-- phoneNumber strings -->
    <string name="phone">Teléfono</string>
    <string name="prefix_phone_number">+57 </string>
    <string name="data_has_been_correctly_updated">Los datos se han actualizado correctamente.</string>
    <string name="add_phone_number">Agrega un número de teléfono</string>
    <string name="add_phone_number_description">Enviaremos un código de verificación mediante sms a este número de teléfono.</string>
    <string name="send_sms">Enviar SMS</string>
    <string name="sms_code">SMS Code</string>
    <string name="verify_phone_number">Verifica tu número de teléfono</string>
    <string name="verify_phone_number_description">Ingresa el código que hemos enviado al número %s</string>
    <string name="resend_code">¿No has recibido el código? <br/> <b>Reenviar</b></string>
    <string name="code_has_been_resent">Se ha enviado el código.</string>
    <string name="verify">Verificar</string>

    <!-- address strings -->
    <string name="address">Dirección</string>
    <string name="address_example">Ej: Calle 80 # 72 – 94</string>
    <string name="details">Detalles</string>
    <string name="details_example">Ej: Torre, Apto, Casa</string>
    <string name="instructions">Indicaciones (opcional)</string>
    <string name="instructions_example">Ej: Al lado de, cerca de …</string>
    <string name="add_address">Agregar dirección</string>

    <string name="address_actions_dialog_message">¿Qué deseas hacer con esta dirección?<br/> %s</string>
    <string name="address_actions_dialog_check_address">Marcar como principal</string>
    <string name="address_actions_dialog_delete_address">Eliminar</string>






    <!-- Failures strings -->

    <string name="failure_generic">Ha ocurrido un error.</string>

    <!-- Products -->
    <string name="failure_no_tags">Ha ocurrido un error. Intenta de nuevo más tarde.</string>
    <string name="failure_no_products_for_tag">No hay productos para mostrar. Intenta en otra categoría.</string>
    <string name="failure_no_variations_found">Ha ocurrido un error. Intenta de nuevo más tarde.</string> <!-- Should never occur -->
    <string name="failure_empty_search_query">Ingresa un valor en la barra de búsqueda.</string>
    <string name="failure_no_search_result">No hay productos que coincidan con tu búsqueda.</string>
    <string name="failure_empty_cart_list">El carrito está vacío.</string>

    <!-- Auth -->
    <string name="failure_empty_field">Campo vacío.</string>
    <string name="failure_short_field_m">El %1$s debe tener al menos %2$d caracteres.</string>
    <string name="failure_short_field_f">La %1$s debe tener al menos %2$d caracteres.</string>
    <string name="failure_invalid_field_m">Por favor ingresa un %s válido.</string>
    <string name="failure_invalid_field_f">Por favor ingresa una %s válida.</string>
    <string name="failure_incorrect_field_m">El %s es incorrecto.</string>
    <string name="failure_incorrect_field_f">La %s es incorrecta.</string>

    <string name="failure_not_linked_sign_in_method">Este correo ya se encuentra registrado. Para iniciar sesión accede mediante %s en la pantalla anterior.</string>
    <string name="failure_new_user">Este correo aún no está registrado. Crea una cuenta para continuar.</string>
    <string name="failure_existent_user">Este correo ya se encuentra registrado. Para crear una cuenta usa un correo diferente, o prueba iniciando sesión.</string>

    <string name="failure_invalid_request_phone_number">Petición inválida. Revisa el número de teléfono ingresado.</string>
    <string name="failure_code_has_expired">El código ha expirado. Intenta enviar otro código de nuevo.</string>
    <string name="failure_too_many_requests">Ha ocurrido un error. Por favor intenta de nuevo más tarde.</string>

</resources>