<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home_fragment"
        android:icon="@drawable/sel_store"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_search_fragment"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search" />
    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/sel_cart"
        android:title="@string/menu_cart" />
    <item
        android:id="@+id/nav_support_fragment"
        android:icon="@drawable/sel_support"
        android:title="@string/menu_support" />
    <item
        android:id="@+id/nav_user"
        android:icon="@drawable/sel_person"
        android:title="@string/menu_user" />

</menu>