<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".user.address.ui.AddressAddFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/btn_back"
                style="@style/Widget.Veggie.AppBarLayout.ButtonImageView"
                android:src="@drawable/ic_arrow_back"
                android:importantForAccessibility="no"
                app:tint="?attr/colorPrimary" />

            <TextView
                style="@style/Widget.Veggie.AppBarLayout.Title"
                android:text="@string/add_address" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="?attr/paddingBig">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                app:helperText="@string/address_example"
                android:layout_marginBottom="?attr/paddingStandard">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/details_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details"
                app:helperText="@string/details_example"
                android:layout_marginBottom="?attr/paddingStandard">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/instructions_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/instructions"
                app:helperText="@string/instructions_example"
                android:layout_marginBottom="?attr/paddingStandard">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?attr/paddingStandard"
                android:text="@string/save" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>