<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="@dimen/padding_big"
    tools:context=".user.auth.ui.ForgotPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            style="@style/Widget.Veggie.AppBarLayout.ButtonImageView"
            android:id="@+id/btn_back"
            android:src="@drawable/ic_arrow_back"
            android:importantForAccessibility="no"
            app:tint="?attr/colorPrimary"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="@dimen/padding_big"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:layout_marginBottom="@dimen/padding_standard"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_instructions"
            android:alpha="?attr/alphaSecondaryText"
            android:layout_marginBottom="@dimen/padding_big"
            android:maxLines="10" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_email_outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_standard"
            android:text="@string/send" />

    </LinearLayout>

</ScrollView>