<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".user.ui.EmailSignInFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_standard">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/Widget.Veggie.TextInputLayout"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_email_outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/Widget.Veggie.TextInputLayout"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/ic_password_outline"
            app:endIconMode="password_toggle"
            android:layout_below="@id/email_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:text="@string/forgot_password"
            android:textAppearance="?attr/textAppearanceCaption"
            android:paddingVertical="@dimen/padding_small"
            android:layout_marginVertical="@dimen/padding_small"
            android:layout_gravity="end"
            android:layout_below="@id/password_layout"
            android:layout_alignParentEnd="true"/>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_standard"
            android:text="@string/sign_in"
            android:layout_alignParentBottom="true"/>


    </RelativeLayout>

</ScrollView>