<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.ui_main_screen.UserFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="?attr/paddingBig">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                style="@style/Widget.Veggie.AppBarLayout.Title"
                android:layout_width="0dp"
                app:layout_constraintEnd_toStartOf="@+id/photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:maxLines="1"
                android:ellipsize="end"
                tools:text="Name" />

            <TextView
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="?attr/alphaSecondaryText"
                android:paddingHorizontal="?attr/paddingStandard"
                app:layout_constraintEnd_toStartOf="@+id/photo"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name"
                android:maxLines="1"
                android:ellipsize="end"
                tools:text="Email" />

            <ImageView
                android:id="@+id/photo"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:layout_marginEnd="?attr/paddingStandard"
                android:background="@color/green_200"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@mipmap/ic_launcher" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="?attr/paddingStandard"
            android:clipToPadding="false">

            <TextView
                android:id="@+id/item_profile"
                style="@style/Widget.Veggie.UserItem"
                android:text="@string/user_profile"
                app:drawableStartCompat="@drawable/ic_person_outline" />

            <TextView
                android:id="@+id/item_orders"
                style="@style/Widget.Veggie.UserItem"
                android:text="@string/user_orders"
                app:drawableStartCompat="@drawable/ic_shipping_outline" />

            <TextView
                android:id="@+id/item_address"
                style="@style/Widget.Veggie.UserItem"
                android:text="@string/user_addresses"
                app:drawableStartCompat="@drawable/ic_pin_drop_outline" />

            <TextView
                android:id="@+id/sign_out"
                android:layout_gravity="bottom"
                style="@style/Widget.Veggie.UserItem"
                android:text="@string/user_sign_out"
                app:drawableStartCompat="@drawable/ic_logout_outline" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
