<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".user.address.ui.AddressFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/btn_back"
                style="@style/Widget.Veggie.AppBarLayout.ButtonImageView"
                android:src="@drawable/ic_arrow_back"
                android:importantForAccessibility="no"
                app:tint="?attr/colorPrimary" />

            <TextView
                style="@style/Widget.Veggie.AppBarLayout.Title"
                android:text="@string/user_addresses" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="?attr/paddingBig">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/error_text"
                style="@style/Widget.Veggie.ErrorText"
                android:layout_gravity="center"
                android:text="@string/failure_generic"/>

            <RadioGroup
                android:id="@+id/address_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:showDividers="middle"
                android:divider="?attr/colorOnSurface"
                android:orientation="vertical">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Calle XXX # XX - XX \nTorre X Apto XX" />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Calle XXX # XX - XX" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_add_address"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?attr/paddingStandard"
                android:text="@string/add_address" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>