<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_standard"
    tools:context=".user.ui.SignInOptionsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/email_sign_in"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_app"
            app:layout_constraintHeight_max="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/email_sign_in"
        style="@style/Widget.Veggie.Button.SignIn"
        android:text="@string/btn_email"
        app:icon="@drawable/ic_email_outline"
        app:layout_constraintBottom_toTopOf="@+id/google_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_layout" />

    <Button
        android:id="@+id/google_sign_in"
        style="@style/Widget.Veggie.Button.SignIn"
        android:backgroundTint="?attr/colorSurface"
        android:text="@string/btn_google"
        android:textColor="?attr/colorOnSurface"
        app:icon="@drawable/ic_google"
        app:iconTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/facebook_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_sign_in" />

    <Button
        android:id="@+id/facebook_sign_in"
        style="@style/Widget.Veggie.Button.SignIn"
        android:backgroundTint="@color/facebook_color"
        android:text="@string/btn_facebook"
        android:textColor="@color/white"
        app:icon="@drawable/ic_facebook"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_sign_in" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>